--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>My Personal HomePage/title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./style.css" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Alkatra:wght@400;600&family=Courgette&family=Happy+Monkey&family=Mukta&family=Orbitron:wght@500&display=swap"
       rel="stylesheet"
@@ -18,7 +20,6 @@
       rel="stylesheet"
       href="https://unpkg.com/jest-lite@1.0.0-alpha.4/dist/prettify.css"
     />
-    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header class="c-site-header">
@@ -237,7 +238,10 @@
         <button id="previous">Previous</button>
         <button id="next">Next</button>
       </div>
+
       <img id="showImage" />
+
+      
     </main>
 
     <footer>
@@ -249,6 +253,7 @@
             alt=""
           />
         </div>
+
         <div>
           <div id="follow-me">Follow Me On Social Media</div>
           <div class="social-media">
