--- a/index.html
+++ b/index.html
@@ -171,14 +171,14 @@
       <div class="tourism">
         <h1>Beautiful and Historical Places of Turkey</h1>
 
-        <h3>Turkey is a perfect destination for a vacation.</h3>
-        <h3>
+        <p>Turkey is a perfect destination for a vacation.</p>
+        <p>
           Every year, Turkey welcomes millions of domestic and foreign tourists.
-        </h3>
-        <h3>
+        </p>
+        <p>
           Here are some popular places, art crafts and "Delicious Turkish
           Cuisine" that you should see...
-        </h3>
+        </p>
       </div>
 
       <div class="content-wrapper">
