--- a/index.html
+++ b/index.html
@@ -241,7 +241,18 @@
 
       <img id="showImage" />
 
+
+
       
+<!-- ship it -->
+<p>🌷 Place to See Before You Leave Turkey 🌷</p>
+
+<div>
+ <button id="summer">Summer Holidays</button>
+<button id="winter">Winter Holidays</button> 
+</div>
+
+<ul id="listOfVacation"></ul>
     </main>
 
     <footer>
